--- a/style.css
+++ b/style.css
@@ -27,13 +27,9 @@ canvas {
 .title {
 	font-family: 'MyWebFont';
 	font-size: 40px;
-	position: absolute;
-	left: 0;
+	position: relative;
   line-height: 200px;
-  margin-top: 20%;
-  position: absolute;
   text-align: center;
-  top: 50%;
   width: 100%;
   animation: flicker 1s 
 }
@@ -41,12 +37,11 @@ canvas {
 
 .popup h1 {
   color: #fff;
-  font-family: monospace;
+  font-family: 'MyWebFont';
   /* overflow: hidden; */
   /* border-right: .15em solid blueviolet; */
   white-space: nowrap; /* Keeps the content on a single line */
   letter-spacing: .15em; /* Adjust as needed */
-  top: 50%;
   text-align:center;
 }
 
@@ -100,7 +95,7 @@ h2 {
   margin: 0;
   padding: 0;
   color: #fff;
-  font-family: monospace;
+  font-family: "MyWebFont";
 }
 
 /* The typing effect */
@@ -204,4 +199,77 @@ a {
 .card {
   max-height: 100%;
   overflow:auto;
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+.carousel {
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+}
+
+.carousel > ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.slide {
+  position: absolute;
+  inset: 0;
+  opacity: 0;
+  padding: 0;
+  left: calc(50% - 200px);
+  transition: 200ms opacity ease-in-out;
+  transition-delay: 200ms;
+}
+
+.slide > img {
+  display: block;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.slide[data-active] {
+  opacity: 1;
+  z-index: 1;
+  transition-delay: 0ms;
+}
+
+.carousel-button {
+  position: absolute;
+  z-index: 2;
+  background: none;
+  border: none;
+  font-size: 4rem;
+  transform: translateY(-50%);
+  color: rgba(255, 255, 255, .5);
+  cursor: pointer;
+  border-radius: .25rem;
+  padding: 0 .5rem;
+  background-color: rgba(0, 0, 0, .1);
+  top: 20%;
+}
+
+.carousel-button:hover,
+.carousel-button:focus {
+  color: white;
+  background-color: rgba(0, 0, 0, .2);
+}
+
+.carousel-button:focus {
+  outline: 1px solid black;
+}
+
+.carousel-button.prev {
+  left: 30%;
+}
+
+.carousel-button.next {
+  right: 30%;
 }
