--- a/style.css
+++ b/style.css
@@ -231,14 +231,12 @@ a {
   z-index: 2;
   background: none;
   border: none;
-  font-size: 4rem;
-  transform: translateY(-50%);
-  color: rgba(255, 255, 255, .5);
+  font-size: 8rem;
+  color: rgba(255, 255, 255, .8);
   cursor: pointer;
   border-radius: .25rem;
-  padding: 0 .5rem;
-  background-color: rgba(0, 0, 0, .1);
-  top: 20%;
+  padding: 0;
+  background-color: rgba(0, 0, 0, .4);
 }
 
 .carousel-button:hover,
