--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ canvas {
 
 .title {
 	font-family: 'MyWebFont';
-	font-size: 40px;
+	font-size: 50px;
 	position: relative;
   line-height: 200px;
   text-align: center;
@@ -255,4 +255,20 @@ a {
 
 p {
   font-family: "MyWebFont";
+}
+
+@media only screen and (max-width: 768px) {
+  .title {
+    color: #999;
+    font-size: 60px;
+  }
+
+  h2 {
+    font-size: 40px;
+  }
+
+  .icon {
+    height: 75px;
+    width: 75px;
+  }
 }
