--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html, body {
 body {
   background-image: url("assets/background1.gif");
   background-size: cover;
+  background-attachment: fixed;
 }
 
 #main  {
